--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="./3DBox.html">3D Box</a>
-    <a href="./codingGame.html">Learn coding</a>
-    
-</body>
+<html lang="en" class="scroll-smooth">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🎮 Dharm's Game Hub</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-[#eafff5] text-[#10403c] font-mono flex flex-col min-h-screen">
+
+    <!-- Main Content Wrapper -->
+    <main class="flex-grow flex flex-col items-center justify-center px-4 py-10">
+      <div class="w-full max-w-4xl text-center">
+        <h1 class="text-4xl md:text-5xl font-bold mb-10 drop-shadow-sm">
+          🌿 Welcome to Dharm's Game Hub
+        </h1>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+          <!-- Game 1 -->
+          <a href="./3DBox.html"
+            class="bg-[#d8fff2] border-2 border-[#66e5bf] rounded-xl shadow-md p-6 flex flex-col items-center transition-all hover:bg-[#c8fdec] hover:scale-105 hover:shadow-lg">
+            <span class="text-2xl font-semibold mb-1">📦 3D Box</span>
+            <p class="text-sm text-[#10403c]/80">Physics-based 3D object game</p>
+          </a>
+
+          <!-- Game 2 -->
+          <a href="./codingGame.html"
+            class="bg-[#d8fff2] border-2 border-[#66e5bf] rounded-xl shadow-md p-6 flex flex-col items-center transition-all hover:bg-[#c8fdec] hover:scale-105 hover:shadow-lg">
+            <span class="text-2xl font-semibold mb-1">💻 Learn Coding</span>
+            <p class="text-sm text-[#10403c]/80">HTML + CSS interactive practice</p>
+          </a>
+
+          <!-- Add more games as needed -->
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer (always at bottom) -->
+    <footer class="border-t border-[#66e5bf] py-4 text-center text-sm text-[#418e7d]">
+      <p>Made with ❤️ by Dharm</p>
+      <p>© 2025 Dharm's Game Hub</p>
+    </footer>
+
+  </body>
 </html>
