js questions added and did some costimization

--- a/codingGame.html
+++ b/codingGame.html
@@ -1,105 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-[#eafff5] text-[#10403c]">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>💻 Neon Hack Simulator: HTML & CSS Quest</title>
+  <title>💻 Neon Hack Simulator: Web Dev Quest</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background-color: #eafff5;
-      color: #10403c;
-      font-family: 'Fira Code', monospace;
-    }
-
-    .char-box {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 42px;
-      height: 48px;
-      font-size: 1.25rem;
-      border-radius: 8px;
-      margin: 3px;
-      border: 2px solid #66e5bf;
-      background-color: #d8fff2;
-      color: #10403c;
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
-      transition: all 0.2s ease-in-out;
-    }
-
-    .char-box:focus {
-      outline: none;
-      border-color: #4fd1b8;
-      background-color: #c8fdec;
-      box-shadow: 0 0 8px rgba(102, 229, 191, 0.5);
-      animation: pulse 1s infinite ease-in-out;
-    }
-
-    @keyframes pulse {
-      0% { box-shadow: 0 0 6px rgba(102, 229, 191, 0.4); }
-      50% { box-shadow: 0 0 12px rgba(102, 229, 191, 0.6); }
-      100% { box-shadow: 0 0 6px rgba(102, 229, 191, 0.4); }
-    }
-
-    .card {
-      background: #f6fffc;
-      border: 1px solid #d1f7ec;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-    }
-
-    .btn-green {
-      background-color: #a3ffe0;
-      color: #10403c;
-    }
-
-    .btn-green:hover {
-      background-color: #c6ffee;
-    }
-
-    .btn-yellow {
-      background-color: #fffacc;
-      color: #10403c;
-    }
-
-    .btn-yellow:hover {
-      background-color: #fffde1;
-    }
-
-    #blanks-wrapper {
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    #blanks {
-      display: inline-flex;
-      flex-wrap: nowrap;
-    }
-
-    .helper-btn {
-      background-color: #d8fff2;
-      color: #10403c;
-      font-family: 'Fira Code', monospace;
-      font-size: 0.875rem;
-      padding: 6px 10px;
-      border: 1.5px solid #66e5bf;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .helper-btn:hover {
-      background-color: #c8fdec;
-      box-shadow: 0 0 4px rgba(102, 229, 191, 0.5);
-    }
-  </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen px-4 py-10">
-  <h1 class="text-4xl md:text-5xl font-bold mb-8 text-[#10403c] text-center">
-    🌿 Neon Hack: Learn HTML + CSS
-  </h1>
+<body class="flex flex-col items-center justify-center min-h-screen p-6 font-mono">
 
-  <div class="w-full max-w-3xl p-6 rounded-xl card">
+  <h1 class="text-4xl md:text-5xl font-bold mb-8 text-center">
+  🌿 Neon Hack: Learn HTML + CSS + JS
+</h1>
+
+
+  <div class="w-full max-w-3xl bg-[#f6fffc] border border-[#d1f7ec] shadow-md rounded-xl p-6">
     <div class="mb-6">
       <p class="text-[#20a089] font-semibold text-lg">
         LEVEL <span id="level">1</span> - <span id="topic">HTML</span>
@@ -108,90 +22,61 @@
       <p class="text-sm text-[#418e7d] mt-1" id="hint"></p>
     </div>
 
-    <div class="w-full flex flex-wrap gap-2 mb-3">
-      <button class="helper-btn">&lt;</button>
-      <button class="helper-btn">&gt;</button>
-      <button class="helper-btn">/</button>
-      <button class="helper-btn">"</button>
-      <button class="helper-btn">'</button>
-      <button class="helper-btn">=</button>
+    <!-- Helper Buttons -->
+    <div class="w-full flex flex-wrap gap-2 mb-4">
+      <button class="helper-btn"> &lt; </button>
+      <button class="helper-btn"> &gt; </button>
+      <button class="helper-btn"> / </button>
+      <button class="helper-btn"> " </button>
+      <button class="helper-btn"> ' </button>
+      <button class="helper-btn"> = </button>
+      <button class="helper-btn"> ( </button>
+      <button class="helper-btn"> ) </button>
+      <button class="helper-btn"> ; </button>
+      <button class="helper-btn"> { </button>
+      <button class="helper-btn"> } </button>
     </div>
 
-    <div id="blanks-wrapper" class="w-full mb-4 overflow-x-auto">
-      <div id="blanks" class="px-1"></div>
+    <!-- Blanks Wrapper -->
+    <div id="blanks-wrapper" class="w-full overflow-x-auto mb-4">
+      <div id="blanks" class="flex flex-nowrap gap-1 px-1"></div>
     </div>
 
+    <!-- Action Buttons -->
     <div class="mt-4 flex flex-wrap items-center gap-3">
-      <button id="submit-btn" class="btn-green px-4 py-2 rounded-md font-bold">
+      <button id="submit-btn" class="bg-[#a3ffe0] hover:bg-[#c6ffee] text-[#10403c] px-4 py-2 rounded-md font-bold transition">
         Submit
       </button>
-      <button id="toggle-answer-btn" class="btn-yellow px-4 py-2 rounded-md font-bold hidden">
+      <button id="toggle-answer-btn" class="bg-[#fffacc] hover:bg-[#fffde1] text-[#10403c] px-4 py-2 rounded-md font-bold hidden transition">
         Show Answer
       </button>
       <span id="feedback" class="text-sm mt-2 block"></span>
     </div>
   </div>
 
-  <script src="game.js"></script>
-  <script>
-    let activeBox = null;
-
-    document.addEventListener('focusin', (e) => {
-      if (e.target.classList.contains('char-box')) {
-        activeBox = e.target;
+  <!-- Tailwind CSS overrides for dynamic inputs -->
+  <style type="text/tailwindcss">
+    @layer components {
+      .char-box {
+        @apply inline-flex items-center justify-center w-[42px] h-[48px] text-base rounded-lg border-2 border-[#66e5bf] bg-[#d8fff2] text-[#10403c] shadow-inner transition-all duration-200 focus:outline-none focus:border-[#4fd1b8] focus:bg-[#c8fdec];
       }
-    });
-
-document.querySelectorAll('.helper-btn').forEach(btn => {
-  btn.addEventListener('click', () => {
-    if (activeBox) {
-      const insertText = btn.innerText.toLowerCase(); // force lowercase
-      const start = activeBox.selectionStart || 0;
-      const end = activeBox.selectionEnd || 0;
-      const original = activeBox.value || "";
-
-      // Insert lowercase text at cursor
-      activeBox.value = original.slice(0, start) + insertText + original.slice(end);
-      activeBox.setSelectionRange(start + insertText.length, start + insertText.length);
-
-      // Update currentInput array
-      const index = parseInt(activeBox.dataset.index);
-      currentInput[index] = insertText;
-
-      // Move to next input box
-      const allBoxes = Array.from(document.querySelectorAll('.char-box'));
-      const currentIndex = allBoxes.indexOf(activeBox);
-      const nextBox = allBoxes[currentIndex + 1];
-      if (nextBox && !nextBox.readOnly) {
-        nextBox.focus();
+      .char-box:focus {
+        animation: pulse 1s infinite ease-in-out;
+      }
+      .helper-btn {
+        @apply bg-[#d8fff2] text-[#10403c] text-sm font-mono px-3 py-1.5 border border-[#66e5bf] rounded-md transition-all duration-150;
+      }
+      .helper-btn:hover {
+        @apply bg-[#c8fdec] shadow-md;
       }
     }
-  });
-});
-      btn.addEventListener('click', () => {
-        if (activeBox) {
-          const insertText = btn.innerText;
-          const start = activeBox.selectionStart || 0;
-          const end = activeBox.selectionEnd || 0;
-          const original = activeBox.value || "";
+    @keyframes pulse {
+      0% { box-shadow: 0 0 6px rgba(102, 229, 191, 0.4); }
+      50% { box-shadow: 0 0 12px rgba(102, 229, 191, 0.6); }
+      100% { box-shadow: 0 0 6px rgba(102, 229, 191, 0.4); }
+    }
+  </style>
 
-          const newValue = original.slice(0, start) + insertText + original.slice(end);
-          activeBox.value = newValue;
-          activeBox.setSelectionRange(start + insertText.length, start + insertText.length);
-
-          const allBoxes = Array.from(document.querySelectorAll('.char-box'));
-          const currentIndex = allBoxes.indexOf(activeBox);
-          if (currentIndex !== -1) {
-            currentInput[currentIndex] = activeBox.value;
-          }
-
-          if (insertText.length === 1) {
-            const nextBox = allBoxes[currentIndex + 1];
-            if (nextBox && !nextBox.readOnly) nextBox.focus();
-          }
-        }
-      });
-      
-  </script>
-</body>
+  <!-- Game logic -->
+  <script src="game.js"></script>
 </html>
