try cloth like snap chat

--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
               Find words and uncover the category!
             </p>
           </a>
+
+          <!-- Game 4: Try Your Clothes -->
+          <a
+            href="./SnapchatClothTester/visual.html"
+            class="bg-[#d8fff2] border-2 border-[#66e5bf] rounded-xl shadow-md p-6 flex flex-col items-center transition-all hover:bg-[#c8fdec] hover:scale-105 hover:shadow-lg"
+          >
+            <span class="text-3xl mb-2">🧥</span>
+            <span class="text-xl font-semibold mb-1">Try Your Clothes</span>
+            <p class="text-sm text-[#10403c]/80">
+              Virtual T-shirt try-on using webcam
+            </p>
+          </a>
         </div>
       </div>
     </main>
