mamory game added !!

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -78,6 +78,18 @@
             <span class="text-xl font-semibold mb-1">Try Your Clothes</span>
             <p class="text-sm text-[#10403c]/80">
               Virtual T-shirt try-on using webcam
+            </p>
+          </a>
+
+          <!-- Game 5: Memory Match -->
+          <a
+            href="./newGame.html"
+            class="bg-[#d8fff2] border-2 border-[#66e5bf] rounded-xl shadow-md p-6 flex flex-col items-center transition-all hover:bg-[#c8fdec] hover:scale-105 hover:shadow-lg"
+          >
+            <span class="text-3xl mb-2">🧠</span>
+            <span class="text-xl font-semibold mb-1">Memory Match</span>
+            <p class="text-sm text-[#10403c]/80">
+              Flip cards to find all pairs
             </p>
           </a>
         </div>
