--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
               Flip cards to find all pairs
             </p>
           </a>
+
+          <!-- Game 6: Starfall Arcade -->
+          <a
+            href="./shooter.html"
+            class="bg-[#d8fff2] border-2 border-[#66e5bf] rounded-xl shadow-md p-6 flex flex-col items-center transition-all hover:bg-[#c8fdec] hover:scale-105 hover:shadow-lg"
+          >
+            <span class="text-3xl mb-2">🚀</span>
+            <span class="text-xl font-semibold mb-1">Starfall Arcade</span>
+            <p class="text-sm text-[#10403c]/80">
+              Neon shooter with waves of drones
+            </p>
+          </a>
         </div>
       </div>
     </main>
